added parametric education and experience + icons

--- a/app/templates/resume/index.html
+++ b/app/templates/resume/index.html
@@ -45,84 +45,79 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
-                    </div>
+                    <h2 class="mb-5">{{ gettext('Esperienza professionale') }}</h2>
+                    {% if bio["experience"].items()|length > 0 %}
+                        {% for key,experience in bio["experience"].items()|sort(reverse = True) %}
+                            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                                <div class="flex-grow-1">
+                                    <h3 class="mb-0">{{ experience.role }}</h3>
+                                    <div class="subheading mb-3">{{ experience.company }}</div>
+                                    <p>{{ experience.description }}</p>
+                                </div>
+                                <div class="flex-shrink-0"><span class="text-primary">{{ experience.start }} - {{ experience.end }}</span></div>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
-                    </div>
+                    <h2 class="mb-5">{{ gettext('Formazione') }}</h2>
+                    {% if bio["education"].items()|length > 0 %}
+                        {% for key,education in bio["education"].items()|sort(reverse = True) %}
+                            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                                <div class="flex-grow-1">
+                                    <h3 class="mb-0"></h3>
+                                    <div class="subheading mb-3">{{ education.school }}</div>
+                                    <div>{{ education.award }}</div>
+                                    <p>{{ gettext('Valutazione') }}: {{ education.grade }}</p>
+                                </div>
+                                <div class="flex-shrink-0"><span class="text-primary">{{ education.start }} - {{ education.end }}</span></div>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <h2 class="mb-5">{{ gettext('Skills')}}</h2>
+                    <div class="subheading mb-3">{{ gettext('DevOps & CI/CD') }}</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:git" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:bitbucket" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:travisci" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:ansible" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="ant-design:github-filled" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:jenkins" data-inline="false"></span></li>
+                    </ul>
+                    <div class="subheading mb-3">{{ gettext('Linguaggi di programmazione & Frameworks') }}</div>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><span class="iconify" data-icon="carbon:logo-python" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="simple-icons:perl" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="mdi:bash" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:php" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="ant-design:html5-filled" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="bx:bxl-css3" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="bx:bxl-javascript" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="bx:bxl-react" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:vue-js" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="brandico:wordpress" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:flask" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="logos:gunicorn" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:nginx" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:apache" data-inline="false"></span></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="bi:bootstrap" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:docker" data-inline="false"></span></li>
+                        <!--<li class="list-inline-item"><span class="iconify" data-icon="cib:kubernetes" data-inline="false"></span></li>-->
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:amazon-aws" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:postgresql" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:redis" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:jira" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="cib:confluence" data-inline="false"></span></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
