completed multilingual support

--- a/app/templates/resume/index.html
+++ b/app/templates/resume/index.html
@@ -16,8 +16,16 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">{{ gettext('Formazione') }}</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">{{ gettext('Skills') }}</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#courses">{{ gettext('Certificazioni e Corsi') }}</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="dropdown09" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon"> </span> {{ gettext('Lingua') }}</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown09">
+                            <a class="dropdown-item" href="?lang_id_p=it"><span class="flag-icon flag-icon-it"> </span>  Italiano</a>
+                            <a class="dropdown-item" href="?lang_id_p=en"><span class="flag-icon flag-icon-us"> </span>  English</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
+
         </nav>
         <!-- Page Content-->
         <div class="container-fluid p-0">
