added ckad and badges

--- a/app/templates/resume/index.html
+++ b/app/templates/resume/index.html
@@ -141,6 +141,20 @@
                             {% endfor %}
                         {% endif %}
                     </ul>
+                    <div class="row mt-5">
+                        <div class="col-lg-2 col-xl-2 col-12">
+                            <img src="{{ url_for('static', filename='assets/img/aws-certified-cloud-practitioner.png') }}" />
+                        </div>
+                        <div class="col-lg-2 col-xl-2 col-12">
+                            <img src="{{ url_for('static', filename='assets/img/aws-certified-solutions-architect-associate.png') }}" />
+                        </div>
+                        <div class="col-lg-2 col-xl-2 col-12">
+                            <img src="{{ url_for('static', filename='assets/img/ckad-certified-kubernetes-application-developer.png') }}" />
+                        </div>
+                        <div class="col-lg-2 col-xl-2 col-12">
+                            <img src="{{ url_for('static', filename='assets/img/Axelos_ITIL4_Foundations.png') }}" width="168" height="168" />
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
